Fixed image on smaller pixel screen

--- a/Style/style.css
+++ b/Style/style.css
@@ -176,6 +176,10 @@ img {
 /*media queries*/
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 1190px)
+{img{
+    display: none;
+}}
 @media only screen and (max-width: 600px) {
     img {
         display: none;
